[package]
name = "batman-hash"
version = "0.1.0"
authors = ["Lucas <genevasterm@protonmail.ch>"]
edition = "2018"

[dependencies]
ggez = "0.5.1"
nalgebra = "0.25.3"
log = "0.4.14"
env_logger = "0.8.3"
walkdir = "2.3.1"
zip = "0.5.11"

gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"

imgui = "0.7.0"
imgui-gfx-renderer = "0.7.0"

[build-dependencies]
walkdir = "2.3.1"
zip = "0.5.11"