[package]
name = "batman-hash"
version = "0.1.0"
authors = ["Lucas <genevasterm@protonmail.ch>"]
edition = "2018"

[profile.dev]
# suggested by ggez to improve dev performance
# "optimize for speed" levels:
#opt-level = 1
#opt-level = 2
#opt-level = 3

[profile.release]
# this should shrink the built binary down quite a bit
#opt-level = 1
lto = true
panic = 'abort'

[dependencies]
ggez = "0.5.1"
nalgebra = "0.25.3"
log = "0.4.14"
env_logger = "0.8.3"
clap = "2.33.3"
soloud = "0.3.4"
mint = "0.5.6"

gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"

imgui = "0.7.0"
imgui-gfx-renderer = "0.7.0"

[target."cfg(windows)".build-dependencies]
winres = "0.1.11"
walkdir = "2.3.1"
zip = "0.5.11"